# KANQAS_code

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROGRESS.md  README.md  environment.py  kanqas.yml  main.py  pyproject.toml  requirements-dev.txt  run_phase_a.py  run_phase_d.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agents/: DDQN.py  KAQN.py
chemistry/: __init__.py  beh2_fragment.py  h2_vqe.py  lih_vqe.py  molecule.py  vqe_env.py
configs/: beh2_fragment.yaml  h2_vqe.yaml  hardware_eval.yaml  lih_vqe.yaml  noise_aware.yaml
hardware/: __init__.py  hardware_eval.py  ibm_runtime.py  noise_aware_trainer.py  noisy_utils.py
interpretability/: __init__.py  kan_visualizer.py  streamlit_dashboard.py
notebooks/: 01_quickstart.ipynb
scripts/: h2_aggressive.py  h2_one_bond.py  lih_one_bond.py  run_h2_long.py  show_results.py
tests/: test_agents.py  test_chemistry.py  test_curricula.py  test_environment.py  test_hardware.py  test_utils.py
