[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanqas-nisq"
version = "2.0.0"
description = "Hardware-aware Curriculum RL Quantum Architecture Search using KAN policy networks for scalable VQE on real IBM Quantum devices"
readme = "README.md"
authors = [
    { name = "Akash Kundu", email = "akundu@iitis.pl" },
    { name = "KANQAS-NISQ Contributors" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "qiskit>=1.3.0",
    "qiskit-ibm-runtime>=0.34.0",
    "qiskit-aer>=0.16.0",
    "qiskit-nature>=0.7.0",
    "torch>=2.4.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "rich>=13.8.0",
]

[project.optional-dependencies]
kan = ["efficient-kan>=0.1.0"]
dashboard = ["streamlit>=1.39.0", "plotly>=5.24.0"]
tracking = ["wandb>=0.18.0", "mlflow>=2.16.0"]
"error-mitigation" = ["mitiq>=0.40.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]
all = [
    "efficient-kan>=0.1.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "wandb>=0.18.0",
    "mitiq>=0.40.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/Aqasch/KANQAS_code"
"Bug Tracker" = "https://github.com/Aqasch/KANQAS_code/issues"
Paper = "https://epjquantumtechnology.springeropen.com/articles/10.1140/epjqt/s40507-024-00289-z"

[tool.setuptools.packages.find]
include = ["kanqas_nisq*"]
namespaces = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: quick smoke tests",
    "slow: slow integration tests",
    "hardware: tests requiring IBM Quantum credentials",
    "chemistry: chemistry subsystem tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
